--- a/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
+++ b/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="<%= form_authenticity_token %>">
     <title>Admin Monitor - <%= @celestial_body.name %></title>
     <%= stylesheet_link_tag 'admin/monitor', media: 'all' %>
 </head>
